--- a/stylesheets/blogcard.css
+++ b/stylesheets/blogcard.css
@@ -3,4 +3,42 @@
     border-radius: 10px;
     margin: 5px;
     padding: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    "img desc desc"
+    "info info info";
+    background-color: whitesmoke;
+}
+
+.description {
+    grid-area: desc;
+    text-align: justify;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+img {
+    grid-area: img;
+    border-radius: 10px;
+    display: flex;
+    align-self: center;
+    justify-self: start;
+    margin-left: 15px;
+}
+
+.info {
+    grid-area: info;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 15px;
+}
+
+button {
+    border-radius: 10px;
+    width: 120px;
+    height: 40px;
+    cursor: pointer;
 }
